--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
-        "fzaninotto/faker": "^1.9",
+        "fakerphp/faker": "^1.19",
         "gedmo/doctrine-extensions": "^3.7",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
