--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,8 @@ security:
             pattern: ^/api/v1/login
             stateless: true
             json_login:
-                check_path: /api/v1/login_check
+                check_path: /api/v1/login
+                username_path: email
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
