--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,16 +43,20 @@ security:
                 # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
+                default_target_path: back_user_index
+                enable_csrf: true
 
             logout:
-                # Correspond au nom de la route name="logout"
+                # "logout" is the name of the logoute route
                 path: logout
                 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
     access_control:
-      #  - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/back, roles: ROLE_ADMIN }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
       #  - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
