--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -62,7 +62,7 @@ security:
     access_control:
         - { path: ^/back, roles: ROLE_ADMIN }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
       #  - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
