modification entity Recruiter for create company

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=98243249d5dd9e41b27ab5f2eab4ddff
 ###< symfony/framework-bundle ###
 
