Upload pictures routes add/update and get OK

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ yarn-error.log
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> picture directory ###
+/picture
+###< picture directory ###
+
+
