--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,11 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%kernel.project_dir%/pictures'
+
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     
