implementation api-doc : WIP

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,8 @@
 # Route who is used by LexikJWT for get JSON auth
 api_login_check:
     path: /api/v1/login
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
