--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fakerphp/faker": "^1.19",
         "gedmo/doctrine-extensions": "^3.7",
         "lexik/jwt-authentication-bundle": "^2.16",
+        "nelmio/api-doc-bundle": "^4.9",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.5",
